# XNOR-Network-operator

./: CMakeLists.txt  README.md  xnet_common.h  xnet_function.h
test/: CMakeLists.txt  test_binarization.cpp  test_xnorconv.cpp  test_xorconv.cpp
tools/: binary.cpp
